--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
-	ext {
-		springBootVersion = '1.5.3.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-	}
+    ext {
+        springBootVersion = '1.5.3.RELEASE'
+    }
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
 }
 
 apply plugin: 'java'
@@ -22,28 +23,34 @@ jar {
 }
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter')
-	compile('org.springframework.boot:spring-boot-starter-web') {
-		exclude module: 'spring-boot-starter-tomcat'
-	}
-	compile("org.springframework.boot:spring-boot-starter-jetty")
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.postgresql:postgresql:42.1.1')
+    compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: 'spring-boot-starter-tomcat'
+    }
+    compile("org.springframework.boot:spring-boot-starter-jetty")
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.postgresql:postgresql:42.1.1')
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('com.h2database:h2')
-	testCompile('io.rest-assured:rest-assured:3.0.3')
-	testCompile('com.github.tomakehurst:wiremock:2.6.0')
-	testCompile('org.seleniumhq.selenium:selenium-chrome-driver:3.8.1')
-	testCompile('org.seleniumhq.selenium:selenium-remote-driver:3.8.1')
-	testCompile('org.seleniumhq.selenium:selenium-api:3.8.1')
-	testCompile('au.com.dius:pact-jvm-consumer-junit_2.12:3.5.5')
-	testCompile('au.com.dius:pact-jvm-provider-spring_2.12:3.5.5')
-	testCompile('io.github.bonigarcia:webdrivermanager:2.1.0')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('com.h2database:h2')
+    testCompile('io.rest-assured:rest-assured:3.0.3')
+    testCompile('com.github.tomakehurst:wiremock:2.6.0')
+    testCompile('org.seleniumhq.selenium:selenium-chrome-driver:3.8.1')
+    testCompile('org.seleniumhq.selenium:selenium-remote-driver:3.8.1')
+    testCompile('org.seleniumhq.selenium:selenium-api:3.8.1')
+    testCompile('au.com.dius:pact-jvm-consumer-junit_2.12:3.5.5')
+    testCompile('au.com.dius:pact-jvm-provider-spring_2.12:3.5.5')
+    testCompile('io.github.bonigarcia:webdrivermanager:2.1.0')
+}
+
+wrapper {
+    gradleVersion = '4.9'
 }
